# soundproof

./: .gitignore  Cargo.toml  README.md
files/: config.txt
src/: draw.rs  lambda.rs  lambdapi.rs  main.rs  music.rs  parse.rs  performance.rs  soundproof.rs
src/lambdapi/: ast.rs  check.rs  eval.rs  eval2.rs  print.rs  step.rs  term.rs
src/music/: instruments.rs  notes.rs  sequences.rs  stretch.rs
src/performance/: animate.rs  soundproof_bevy.rs
src/soundproof/: select.rs  sound_generators.rs  translate.rs  types.rs
