[package]
name = "soundproof"
version = "0.1.0"
edition = "2021"

[dependencies]
fundsp = "0.20"
sonogram = "0.7.1"
clap = { version = "4.5.16", features = ["derive"] }
signalsmith-stretch = "0.1.1"
rangemap = "1.5.1"
rand = "0.9.1"
nom = "8.0.0"
bevy = "0.16.1"

[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"
