[package]
name = "soundproof"
version = "0.1.0"
edition = "2021"

[dependencies]
fundsp = "0.20"
sonogram = "0.7.1"
clap = { version = "4.5.16", features = ["derive"] }
signalsmith-stretch = "0.1.1"
rangemap = "1.5.1"
rand = "0.9.1"
nom = "8.0.0"
bevy = "0.16.1"
cpal = "0.16.0"
piet = "0.8.0"
read_input = "0.8.6"
minifb = "0.28.0"
piet-common = "0.8.0"
bevy_procedural_audio = "0.5.0"

[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
